cpp-Windows-MSVS+Cmake/example/pxcapi.h

#define PXC_TRG_NO                   0x00
// Initializes the Pixet and all connected devices.
// Must be called as first function before all the other functions.
PXCAPI int pxcInitialize(const char *iniFile="pixet.ini");
// Deinitializes all the devices and Pixet. Must be called at end.
PXCAPI int pxcExit();
// Returns number of connected and initialized devices.
// Devices can be than accessed by its deviceIndex (starting from 0 for the first device)
PXCAPI int pxcGetDevicesCount();
// Returns to the supplied buffer (nameBuffer) full name of the device under the index deviceIndex
// [in]  deviceIndex - index of the device (indexing starting from 0)
// [out] nameBuffer  - buffer where name of the device will be copied
// [out] size        - size of the supplied buffer
PXCAPI int pxcGetDeviceName(unsigned deviceIndex, char* nameBuffer, unsigned size);
// Gets the dimension of the device in pixels
// [in]  deviceIndex - index of the device (indexing starting from 0)
// [out] width - pointer to unsigned variable where the width of the device will be returned
// [out] height - pointer to unsigned variable where the height of the device will be returned
PXCAPI int pxcGetDeviceDimensions(unsigned deviceIndex, unsigned* width, unsigned* height);
// Performs a measurement of single frame and returns its data. This is only for Timepix3 detector.
// [in]  deviceIndex - index of the device (indexing starting from 0)
// [in]  frameTime - time of the measurement in seconds
// [out] frameToaItot - pointer to buffer where data from Toa/iTot counter will be saved. For single detector size should be 65536
// [out] frameTotEvent - pointer to buffer where data from Tot/Event counter will be saved. For single detector size should be 65536
// [out] size - pointer to variable specifying the size of buffer. The actual size will be output to this variable
// [in]  trgStg - settings of external trigger. One of the PXC_TRG_XXX values.
PXCAPI int pxcMeasureSingleFrameTpx3(unsigned deviceIndex, double frameTime, double* frameToaITot, unsigned short* frameTotEvent, unsigned* size, unsigned trgStg = PXC_TRG_NO);
// Sets the operation mode of Timepix3 detector
// [in]  deviceIndex - index of the device (indexing starting from 0)
// [in]  timepix3 mode - PXC_TPX3_OPM_XX values
PXCAPI int pxcSetTimepix3Mode(unsigned deviceIndex, int mode);
// Returns text of last error. This function can be called even before pxcInitialize()
// [out] errorMsgBuffer - buffer where text will be saved
// [in]  size - size of supplied buffer
PXCAPI int pxcGetLastError(char* errorMsgBuffer, unsigned size);